Fix alignment of input boxes and submit button

--- a/style/workspace.css
+++ b/style/workspace.css
@@ -48,8 +48,21 @@
     padding-bottom: 10px;
 }
 
+#multiplicand-dec, #multiplicand-bin, #multiplier-dec, #multiplier-bin {
+    width: calc(100% - 12px);
+}
+
 .input-container {
     border-left: 3px solid var(--gray-emphasis);
+    width: 100% !important;
+    padding: 0px;
+    display: table;
+}
+
+.input-container p {
+    display: table-row; 
+    padding: 0px; 
+    width: 100%;
 }
 
 #multiply-div {
@@ -63,7 +76,7 @@
 }
 
 #multiply {
-    width: 93%;    
+    width: 100%;    
 }
 
 #trivia-div {
